@@ -3,6 +3,7 @@ Fix issues with bacpac creation when windows users are present in database.
 Add Daily and Weekly options to Get-BcArtifactUrl
 Performance optimization of Get-BcArtifactUrl
 Get-BcContainerEventLog now copies the eventlog to HostHelperFolder\EventLogs instead of my folder to avoid blocking container deletion
+Remove Application Roles from bacpacs (re. VA1246 - https://docs.microsoft.com/en-us/azure/azure-sql/database/sql-database-vulnerability-assessment-rules)
 
 3.0.0
 Enable Telemetry. BcContainerHelper will emit usage statistics telemetry to Microsoft for all commands used.
